--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,6 +88,9 @@ set -g status-fg white
 set -g status-bg default
 set -g status-attr default
 
+# using zsh
+set -g default-shell /bin/zsh
+
 # default window title colors
 set-window-option -g window-status-fg cyan
 set-window-option -g window-status-bg default
