--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,7 @@ bind / command-prompt "split-window 'exec man %%'"
 
 # quick view of processes
 bind '~' split-window "exec htop"
+bind '=' split-window -v
 
 # scrollback buffer n lines
 set -g history-limit 5000
@@ -80,7 +81,7 @@ bind C-l resize-pane -R 5
 
 setw -g mode-keys vi
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 ####################################################(NOTE: gallen)
 
 # default statusbar colors
@@ -89,7 +90,11 @@ set -g status-bg default
 set -g status-attr default
 
 # using zsh
-set -g default-shell /bin/zsh
+#set -g default-shell /bin/zsh
+
+# using fish
+set -g default-shell /usr/local/bin/fish
+set -g default-command /usr/local/bin/fish
 
 # default window title colors
 set-window-option -g window-status-fg cyan
@@ -109,10 +114,19 @@ set -g message-attr bright
 # center align the window list
 set -g status-justify centre
 
-# show some useful stats but only when tmux is started 
+# show some useful stats but only when tmux is started
 # outside of Xorg, otherwise dwm statusbar shows these already
 set -g status-right ""
 set -g status-left ""
 if '[ -z "$DISPLAY" ]' 'set -g status-left "[#[fg=green] #H #[default]]"'
 if '[ -z "$DISPLAY" ]' 'set -g status-right "[ #[fg=magenta]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3)#[default] ][ #[fg=cyan,bright]%a %Y-%m-%d %H:%M #[default]]"'
 if '[ -z "$DISPLAY" ]' 'set -g status-right-length 50'
+
+# Smart pane switching with awareness of vim splits
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
