[tmux] set escape time to 0 for neovim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,6 +84,9 @@ setw -g mode-keys vi
 set -g default-terminal "xterm-256color"
 ####################################################(NOTE: gallen)
 
+# for neovim
+set -s escape-time 0
+
 # default statusbar colors
 set -g status-fg white
 set -g status-bg default
