--- a/.tmux.conf
+++ b/.tmux.conf
@@ -133,3 +133,7 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# set the pane border colors
+set -g pane-active-border-fg colour000
+set -g pane-active-border-bg colour191
