[tmux] change color, support true color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -135,5 +135,8 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # set the pane border colors
-set -g pane-active-border-fg colour000
-set -g pane-active-border-bg colour191
+set -g pane-active-border-fg colour255
+set -g pane-active-border-bg colour027
+
+# set true color support
+set -g terminal-overrides ",xterm-256color:Tc"
