use powerline instead of tmux-powerline (not customized yet)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,9 +64,6 @@ set -g set-titles-string "tmux.#I.#W"
 # session initialization
 new -s mysession mutt
 neww -t 2
-neww -d -t 3
-neww -d -t 5 mocp
-neww -d -t 6 rtorrent
 selectw -t 1
 
 # statusbar --------------------------------------------------------------
@@ -82,7 +79,7 @@ bind C-l resize-pane -R 5
 setw -g mode-keys vi
 
 set -g default-terminal "xterm-256color"
-####################################################(NOTE: gallen)
+###################################################(NOTE: gallen)
 
 # for neovim
 set -s escape-time 0
@@ -96,8 +93,9 @@ set -g status-attr default
 #set -g default-shell /bin/zsh
 
 # using fish
-set -g default-shell /usr/local/bin/fish
-set -g default-command /usr/local/bin/fish
+# NOTE:In Manjaro, the path is /usr/bin/fish
+set -g default-shell /usr/bin/fish
+set -g default-command /usr/bin/fish
 
 # default window title colors
 set-window-option -g window-status-fg cyan
@@ -115,16 +113,19 @@ set -g message-bg black
 set -g message-attr bright
 
 # center align the window list
-set -g status-justify centre
+#set -g status-justify centre
+
+run-shell "powerline-daemon -q"
+source "/home/gallen/.config/powerline/powerline.conf"
 
 # show some useful stats but only when tmux is started
 # outside of Xorg, otherwise dwm statusbar shows these already
-set -g status-right ""
-set -g status-left ""
-if '[ -z "$DISPLAY" ]' 'set -g status-left "[#[fg=green] #H #[default]]"'
-if '[ -z "$DISPLAY" ]' 'set -g status-right "[ #[fg=magenta]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3)#[default] ][ #[fg=cyan,bright]%a %Y-%m-%d %H:%M #[default]]"'
-if '[ -z "$DISPLAY" ]' 'set -g status-right-length 50'
-
+# # set -g status-right ""
+# # set -g status-left ""
+# # if '[ -z "$DISPLAY" ]' 'set -g status-left "[#[fg=green] #H #[default]]"'
+# # if '[ -z "$DISPLAY" ]' 'set -g status-right "[ #[fg=magenta]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3)#[default] ][ #[fg=cyan,bright]%a %Y-%m-%d %H:%M #[default]]"'
+# # if '[ -z "$DISPLAY" ]' 'set -g status-right-length 50'
+#
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
