customize tmux-powerline

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -119,8 +119,8 @@ set -g status-justify centre
 
 # show some useful stats but only when tmux is started
 # outside of Xorg, otherwise dwm statusbar shows these already
-set -g status-right ""
-set -g status-left ""
+set -g status-right "Right"
+set -g status-left "Left"
 if '[ -z "$DISPLAY" ]' 'set -g status-left "[#[fg=green] #H #[default]]"'
 if '[ -z "$DISPLAY" ]' 'set -g status-right "[ #[fg=magenta]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3)#[default] ][ #[fg=cyan,bright]%a %Y-%m-%d %H:%M #[default]]"'
 if '[ -z "$DISPLAY" ]' 'set -g status-right-length 50'
@@ -136,7 +136,16 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # set the pane border colors
 set -g pane-active-border-fg colour255
-set -g pane-active-border-bg colour027
+set -g pane-active-border-bg colour006
 
 # set true color support
 set -g terminal-overrides ",xterm-256color:Tc"
+set-option -g status on
+set-option -g status-interval 1
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+#if-shell '$COLUMNS <= 90' 'set-option -g status-left-length 43' # don't show W when narrow terminal
+set-option -g status-left "#(/Users/valerie/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#(/Users/valerie/tmux-powerline/powerline.sh right)"
+
