--- a/.tmux.conf
+++ b/.tmux.conf
@@ -158,6 +158,6 @@ set-option -g status-justify "centre"
 set-option -g status-left-length 60
 set-option -g status-right-length 90
 #if-shell '$COLUMNS <= 90' 'set-option -g status-left-length 43' # don't show W when narrow terminal
-set-option -g status-left "#(/Users/gallen/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(/Users/gallen/tmux-powerline/powerline.sh right)"
+set-option -g status-left "#($HOME/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#($HOME/tmux-powerline/powerline.sh right)"
 
