--- a/.tmux.conf
+++ b/.tmux.conf
@@ -87,44 +87,22 @@ set -g default-terminal "xterm-256color"
 # for neovim
 set -s escape-time 0
 
-# default statusbar colors
-set -g status-fg white
-set -g status-bg default
-set -g status-attr default
-
 # using zsh
-#set -g default-shell /bin/zsh
+set -g default-shell /bin/zsh
 
 # using fish
-set -g default-shell /usr/local/bin/fish
-set -g default-command /usr/local/bin/fish
-
-# default window title colors
-set-window-option -g window-status-fg cyan
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
-
-# command/message line colors
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+#set -g default-shell /usr/local/bin/fish
+#set -g default-command /usr/local/bin/fish
 
 # center align the window list
-set -g status-justify centre
+#set -g status-justify centre
 
-# show some useful stats but only when tmux is started
-# outside of Xorg, otherwise dwm statusbar shows these already
-set -g status-right "Right"
-set -g status-left "Left"
-if '[ -z "$DISPLAY" ]' 'set -g status-left "[#[fg=green] #H #[default]]"'
-if '[ -z "$DISPLAY" ]' 'set -g status-right "[ #[fg=magenta]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3)#[default] ][ #[fg=cyan,bright]%a %Y-%m-%d %H:%M #[default]]"'
-if '[ -z "$DISPLAY" ]' 'set -g status-right-length 50'
+# set the pane border colors
+set -g pane-active-border-fg colour255
+set -g pane-active-border-bg colour006
 
+# set true color support
+set -g terminal-overrides ",xterm-256color:Tc"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -146,18 +124,38 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
-# set the pane border colors
-set -g pane-active-border-fg colour255
-set -g pane-active-border-bg colour006
+# default window title colors
+set-window-option -g window-status-fg cyan
+set-window-option -g window-status-bg default
 
-# set true color support
-set -g terminal-overrides ",xterm-256color:Tc"
-set-option -g status on
-set-option -g status-interval 1
-set-option -g status-justify "centre"
-set-option -g status-left-length 60
-set-option -g status-right-length 90
-#if-shell '$COLUMNS <= 90' 'set-option -g status-left-length 43' # don't show W when narrow terminal
-set-option -g status-left "#($HOME/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#($HOME/tmux-powerline/powerline.sh right)"
+# active window title colors
+set-window-option -g window-status-current-fg white
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
 
+# command/message line colors
+set -g message-fg white
+set -g message-bg black
+# default statusbar colors
+set -g status-fg white
+set -g status-bg default
+
+# renumber windows option
+set-option -g renumber-windows on
+
+
+run-shell "powerline-daemon -q"
+#source "/Users/gallen/powerline/powerline/bindings/tmux/powerline.conf"
+if-shell 'env "$POWERLINE_CONFIG_COMMAND" tmux setup' '' 'run-shell "powerline-config tmux setup"'
+# activate TPM
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+set -g @plugin "arcticicestudio/nord-tmux"
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
