--- a/.gitconfig
+++ b/.gitconfig
@@ -1,20 +1,17 @@
+[core]
+  editor = nvim
+  pager = delta
 [user]
 	email = seirios0107@gmail.com
-	name = nellaG
-[core]
-  editor = vim
-  excludesfile = ./.gitignore
-[color]
-  ui = auto
-[merge]
-  tool = p4merge
-[mergetool]
-  prompt = false
-[diff]
-  tool = p4merge
-[difftool]
-  prompt = false
-[push]
-  default = simple
-[http]
-  sslVerify = true
+  name = nellag
+[alias]
+  root = rev-parse --show-toplevel
+  st = status
+  cm = commit
+  log = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit
+[interactive]
+  diffFilter = delta --color-only
+[delta]
+  line-numbers = true
+  side-by-side = true
+  syntax-theme = DarkNeon
