--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [core]
   editor = nvim
-  pager = delta
+  #pager = delta
 [user]
 	email = seirios0107@gmail.com
   name = nellag
@@ -13,5 +13,5 @@
   diffFilter = delta --color-only
 [delta]
   line-numbers = true
-  side-by-side = true
+  #side-by-side = true
   syntax-theme = DarkNeon
