--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,11 +88,11 @@ set -g default-terminal "xterm-256color"
 set -s escape-time 0
 
 # using zsh
-set -g default-shell /bin/zsh
+#set -g default-shell /bin/zsh
 
 # using fish
-#set -g default-shell /usr/local/bin/fish
-#set -g default-command /usr/local/bin/fish
+set -g default-shell /usr/local/bin/fish
+set -g default-command /usr/local/bin/fish
 
 # center align the window list
 #set -g status-justify centre
@@ -143,9 +143,6 @@ set -g status-bg default
 # renumber windows option
 set-option -g renumber-windows on
 
-run-shell "powerline-daemon -q"
-#source "/Users/gallen/powerline/powerline/bindings/tmux/powerline.conf"
-if-shell 'env "$POWERLINE_CONFIG_COMMAND" tmux setup' '' 'run-shell "powerline-config tmux setup"'
 # activate TPM
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -155,6 +152,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
-set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin 'erikw/tmux-powerline'  # beware that other plugin can override powerline theme
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
