--- a/.tmux.conf
+++ b/.tmux.conf
@@ -148,6 +148,9 @@ set-option -g renumber-windows on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
+# don't use vim-tmux-navigator key binding settings using tpm
+# it overrides my C-l (resize pane R) to Clear screen
+
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com:user/plugin'
